--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,48 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "applogo.png",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "applogo-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "applogo-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "applogo-57x57.png",
+      "sizes": "57x57",
+      "type": "image/png"
+    },
+    {
+      "src": "applogo-76x76.png",
+      "sizes": "76x76",
+      "type": "image/png"
+    },
+    {
+      "src": "applogo-114x114.png",
+      "sizes": "114x114",
+      "type": "image/png"
+    },
+    {
+      "src": "applogo-120x120.png",
+      "sizes": "120x120",
+      "type": "image/png"
+    },
+    {
+      "src": "applogo-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "applogo-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "applogo-180x180.png",
+      "sizes": "180x180",
       "type": "image/png"
     }
   ],
