--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next-http-backend": "^2.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
